package com.nanyin.pattern.adapter;
/**
 * 三角插头
 * @Author nanyin
 * @Date 11:13 2019-06-02
 **/
public class ThreeLeggedPlug {
    public void charge(){
        System.out.println("use three legged plug");
    }
}
