package com.nanyin.pattern.adapter;

public class TwoLeggedPlug {
    public void fastCharge(){
        System.out.println("use two legged plug for fast charge !");
    }
}
